updating data analysis prompt

--- a/notebooks/Useful_stuff.ipynb
+++ b/notebooks/Useful_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 107,
    "id": "501477b9",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 108,
    "id": "bf5d6af1",
    "metadata": {
     "ExecuteTime": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 109,
    "id": "2cbc9f06",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 110,
    "id": "d97ef2b2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "Index(['age', 'bmi', 'children', 'smoker', 'region', 'charges'], dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 111,
    "id": "9631fb7e",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        " '#17becf']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "id": "82bc6a63",
    "metadata": {
     "ExecuteTime": {
@@ -124,64 +124,95 @@
      "text": [
       "T̲a̲r̲g̲e̲t̲ ̲o̲v̲e̲r̲v̲i̲e̲w̲:\n",
       "\n",
-      " The target is charges.\n",
-      "    It is composed of 0% of np.nan.\n",
-      "    Its dtypes is float64.\n",
-      "    Without specifying an estimator_job, the target will be considered as continuous.\n",
+      "  The target is survived.\n",
+      "  It is composed of 0% of np.nan.\n",
+      "  Its dtypes is int64.\n",
+      "  Without specifying an estimator_job, the target will be considered as categorical.\n",
+      "\n",
       "\n",
       "F̲e̲a̲t̲u̲r̲e̲s̲ ̲o̲v̲e̲r̲v̲i̲e̲w̲:\n",
       "\n",
-      "  There is 6 columns which are:\n",
+      "  There is 15 columns which are:\n",
       "\n",
-      "    - 33.33% of them seem to be numerical;\n",
+      "    - 13.33% of them seem to be numerical: [age, fare];\n",
       "\n",
-      "    - 66.67% of them seem to be categorical;\n",
+      "    - 86.67% of them seem to be categorical: [survived, pclass, sex, sibsp, parch, embarked, class, who, adult_male, deck, embark_town, alive, alone];\n",
       "\n",
       "D̲t̲y̲p̲e̲s̲ ̲o̲v̲e̲r̲v̲i̲e̲w̲:\n",
       "\n",
-      "  Dataset has 4 different dtypes which are:\n",
+      "  Dataset has 6 different dtypes which are:\n",
       "\n",
-      "    - float64 corresponds to 50.0% of columns and includes columns: age, bmi, charges\n",
+      "    - int64 corresponds to 26.67% of columns and includes columns: survived, pclass, sibsp, parch\n",
       "\n",
-      "    - int64 corresponds to 16.67% of columns and includes columns: children\n",
+      "    - object corresponds to 33.33% of columns and includes columns: sex, embarked, who, embark_town, alive\n",
       "\n",
-      "    - bool corresponds to 16.67% of columns and includes columns: smoker\n",
+      "    - float64 corresponds to 13.33% of columns and includes columns: age, fare\n",
       "\n",
-      "    - object corresponds to 16.67% of columns and includes columns: region\n",
+      "    - category corresponds to 6.67% of columns and includes columns: class\n",
+      "\n",
+      "    - bool corresponds to 13.33% of columns and includes columns: adult_male, alone\n",
+      "\n",
+      "    - category corresponds to 6.67% of columns and includes columns: deck\n",
       "\n",
       "N̲a̲n̲ ̲o̲v̲e̲r̲v̲i̲e̲w̲:\n",
       "\n",
-      "There are 1 features over 6 (0.17% of whole df) that include np.nan\n",
+      "There are 4 features over 15 (0.27% of whole df) that include np.nan\n",
       "\n",
-      "Have a look at these features (% of nan): age: 0.3%\n",
+      "Have a look at these features (% of nan): deck: 77.22%, age: 19.87%, embarked: 0.22%, embark_town: 0.22%\n",
+      "\n",
       "F̲e̲a̲t̲u̲r̲e̲s̲ ̲t̲o̲_̲d̲r̲o̲p\n",
       "\n",
+      "  There might be features to drop these features: deck, age\n",
       "\n",
-      "No features to drop found.\n",
+      "  No features to drop found.\n",
       "\n",
+      "W̲h̲i̲c̲h̲ ̲s̲c̲a̲l̲e̲ ̲t̲o̲ ̲u̲s̲e\n",
       "\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1338 entries, 0 to 1337\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column    Non-Null Count  Dtype  \n",
-      "---  ------    --------------  -----  \n",
-      " 0   age       1334 non-null   float64\n",
-      " 1   bmi       1338 non-null   float64\n",
-      " 2   children  1338 non-null   int64  \n",
-      " 3   smoker    1338 non-null   bool   \n",
-      " 4   region    1338 non-null   object \n",
-      " 5   charges   1338 non-null   float64\n",
-      "dtypes: bool(1), float64(3), int64(1), object(1)\n",
-      "memory usage: 53.7+ KB\n",
-      "None\n",
+      "Among your numerical features:\n",
+      "    - 0 should use a StandardScaler: [])\n",
+      "    - 1 should use a RobustScaler: [age])\n",
+      "    - 1 should use a MinMaxScaler: [fare])\n",
       "\n",
-      "\n",
-      "Let's have a look at all the features\n"
+      "L̲e̲t̲'̲s̲ ̲h̲a̲v̲e̲ ̲a̲ ̲l̲o̲o̲k̲ ̲a̲t̲ ̲a̲l̲l̲ ̲t̲h̲e̲ ̲f̲e̲a̲t̲u̲r̲e̲s̲:\n"
      ]
     }
    ],
    "source": [
-    "quick_check(data, 'charges',plot_overview=False)"
+    "quick_check(df, 'survived',plot_overview=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "f9460135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3y/s6r1wjkx4flbn7tcx695504c0000gn/T/ipykernel_36427/2907027414.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  data.kurt()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "age        -1.245293\n",
+       "bmi        -0.024964\n",
+       "children    0.202454\n",
+       "smoker      0.145756\n",
+       "charges     1.606299\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.kurt()"
    ]
   },
   {
