adding an hex validator to utils

--- a/notebooks/Useful_stuff.ipynb
+++ b/notebooks/Useful_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "id": "501477b9",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "id": "bf5d6af1",
    "metadata": {
     "ExecuteTime": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "id": "2cbc9f06",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "id": "d97ef2b2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "Index(['age', 'bmi', 'children', 'smoker', 'region', 'charges'], dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "id": "9631fb7e",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        " '#17becf']"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +105,55 @@
    "source": [
     "default_colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
     "default_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "28650799",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#code to validate HEX color convention\n",
+    "import regex as re\n",
+    "def hex_validator(colors : str | list):\n",
+    " \n",
+    "    # Regex to check valid\n",
+    "    # hexadecimal color code.\n",
+    "\tif isinstance(colors, str):\n",
+    "\t\tcolors = [colors]\n",
+    "\t\n",
+    "\tregex = \"^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$\"\n",
+    "\n",
+    "\tfor color in colors:\n",
+    "\t\n",
+    "\t\t# Compile the ReGex\n",
+    "\t\tp = re.compile(regex)\n",
+    "\t\n",
+    "\t\t# If the string is empty\n",
+    "\t\t# return false\n",
+    "\t\tif(color == None):\n",
+    "\t\t\treturn False\n",
+    "\t\n",
+    "\t\t# Return if the string\n",
+    "\t\t# matched the ReGex\n",
+    "\t\tif not (re.search(p, color)):\n",
+    "\t\t\treturn False\n",
+    "\n",
+    "\treturn True \n",
+    "\n",
+    "hex_validator(default_colors)"
    ]
   },
   {
